
           Added a test script Best_MA.pl to optimize the best performing MA for a given symbol.

           Added script TestDialog.pl that displays the Test Dialog database browser.

20110307:  Refined the TEST scripts and logic to increase speed 10 fold by only saving the best
           performer and not every iteration. The hold up was the db.

           Fixed bug in YAHOO_DIALOG that did not update the list or db when a symbol is deleted
           from the db.

20110308:  Moved chart object dialog plugins into src and consolidated some of the plugins.

           Fixed bug 3202579 - chart object names not unique per asset. Removed user selection of chart
           object id's and will use UUID instead to assign unique names.

           Fixed bug 3202527 - missing DeleteTestThread.h

           Consolidated the CHART_OBJECT_*_TEMP plugins.

20110310:  Added new INPUT_* parms for most of the indicators. These changes are to fix some problems with
           indicators using displayed chart bars instead of bars loaded by scripts.

20110312:  Added a search facility to the yahoo symbol dialog. Put controls into a toolbar.

           Refined the yahoo dialog a little more.

           Added a new scanner script New_High.pl. This will scan for symbols making a new high in
           a specified time frame.

20110313:  Fixed bug that causes a segfault if the data window is opened with no chart loaded.

20110315:  Removed the OPEN, HIGH, LOW, CLOSE, VOLUME, OPEN_INTEREST plugins and folded them into one
           called DOHLCVI. Wanted to reduce the number of plugins.

           Removed the INDICATOR_PLOT_DATE_GET plugin. The new way to get the date is to use the DOHLCVI
           plugin and then use the INDICATOR_PLOT_VALUE_GET plugin with the date created with DOHLCVI. This
           way we have a uniform method of getting values.

           Fixed bug #3203932 - KEY = QUOTE_DATABASE_SEARCH_SYMBOLS failed to return data.
