@@ -1,0 +1,68 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <meta content="text/html; charset=ISO-8859-1"
+ http-equiv="Content-Type">
+  <title>Qtstalker: STOCK_SPLIT</title>
+  <link rel="stylesheet" type="text/css" href="qtstalker.css"
+ media="screen">
+  <script src="qtstalker.js" type="text/javascript"> </script>
+</head>
+<body>
+<div id="content">
+<div id="rightPanel">
+<div id="toc">
+<hr>
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="toc.html">Table of Contents</a></li>
+</ul>
+</div>
+</div>
+<!-- Content -->
+<h1>STOCK_SPLIT
+</h1>
+<br>
+<table style="text-align: left; width: 1336px; height: 153px;"
+ border="1" cellpadding="2" cellspacing="2">
+  <tbody>
+    <tr>
+      <td style="vertical-align: top;"><span style="font-weight: bold;">DESCRIPTION:</span></td>
+      <td style="vertical-align: top;">Will adjust all values for
+EXCHANGE:SYMBOL in the database before DATE to the new SPLIT ratio.<br>
+      <br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><span style="font-weight: bold;">SYNTAX:</span></td>
+      <td style="vertical-align: top;">PLUGIN = STOCK_SPLIT<br>
+EXCHANGE = &lt;EXCHANGE CODE&gt;<br>
+SYMBOL = &lt;TICKER&gt;<br>
+DATE = &lt;DATE&gt; - ISO date format (yyyy-MM-dd HH:mm:ss)<br>
+SPLIT = &lt;SPLIT RATIO&gt; - e.g. 2:1, 3:2, 1:10<br>
+      <br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><span style="font-weight: bold;">RETURNS:</span></td>
+      <td style="vertical-align: top;">'0' = Success<br>
+'ERROR' =
+Failure<br>
+      <br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><span style="font-weight: bold;">EXAMPLE:</span></td>
+      <td style="vertical-align: top;">PLUGIN=STOCK_SPLIT,
+EXCHANGE=XNYS, SYMBOL=GOOG, DATE=2011-03-15 16:00:00,SPLIT=2:1<br>
+      <br>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<br>
+<br>
+<span style="font-weight: bold;"></span><br>
+</div>
+</body>
+</html>
