@@ -172,6 +172,8 @@ list of <a href="CHANGELOG-0.37">changes</a> and <a
     <li><a href="STOCH_FAST.html">STOCH_FAST</a></li>
     <li><a href="STOCH_RSI.html">STOCH_RSI</a></li>
     <li><a href="STOCH_SLOW.html">STOCH_SLOW</a></li>
+    <li><a href="STOCK_SPLIT.html">STOCK_SPLIT</a><br>
+    </li>
     <li><a href="SUB.html">SUB</a></li>
     <li><a href="SYMBOL_CURRENT.html">SYMBOL_CURRENT</a></li>
     <li><a href="SYMBOL_DIALOG.html">SYMBOL_DIALOG</a></li>
